v2016-03-20
  * SlackBook翻译项目已经结束

v2016-03-07
  * 解决了升级主题后自定义页面未翻译的问题

v2016-03-06
  * SlackBook翻译项目已经启动

v2016-03-02
  * 杂七杂八的修改
  * 增加了一些友链

v2016-03-01
  * 增加了加入我们页面
  * 新的Schemes

v2016-02-29.4
  * Fixed #1

v2016-02-29.3
  * 增加了官网友链
  * 修改了关于页面

v2016-02-29.2
  * 增加了关于页面
  * 增加了几个友链
  * 修改了404 页面

v2016-02-29
  * To the beginning
