@@ -1,3 +1,6 @@
 [submodule "themes/hexo-theme-next"]
 	path = themes/hexo-theme-next
 	url = https://github.com/iissnan/hexo-theme-next
+[submodule "themes/hexo-theme-freemind.386"]
+	path = themes/hexo-theme-freemind.386
+	url = https://github.com/blackshow/hexo-theme-freemind.386
