@@ -1,0 +1,5 @@
+pub   rsa4096/B66CC194 2016-04-15 [SC]
+      Key fingerprint = 4444 9495 01B3 CC2A 7657  9C08 25FF D92A B66C C194
+uid         [ultimate] Arondight <shell_way@foxmail.com>
+sub   rsa4096/F96E3CB7 2016-04-15 [E]
+
