@@ -1,0 +1,1 @@
+../../../../images/avatar.jpg
