@@ -1,3 +1,6 @@
+v2016-05-07
+  * 主题切换到了hexo-theme-freemind.386
+
 v2016-03-20
   * SlackBook翻译项目已经结束
 
